<resources>
    <string name="app_name">Car_3c</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_communiate">CommuniateActivity</string>
    <string name="start_bluetooth">开启蓝牙</string>
    <string name="show_devices">查询配对设备</string>
    <string name="find_devices">搜索设备</string>
    <string name="lll">设备</string>
    <string name="connect_devices">连接设备</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="Visible">Get Visible</string>
    <string name="List">List Devices</string>
    <string name="example_edittext">Example showing EditText</string>
    <string name="show_the_text">Show the Text</string>
    <string name="enter_text">text changes</string>
</resources>