<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".MainActivity" >

    <ScrollView
    android:id="@+id/scrollView1"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.v7.widget.AppCompatButton
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on"
            android:text="@string/on" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button2"
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="visible"
            android:text="@string/Visible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button3"
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="list"
            android:text="@string/List" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button4"
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="off"
            android:text="@string/off" />

        <ListView
            android:id="@+id/listView1"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" >
        </ListView>



    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:id="@+id/linear_layout_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/clear_recv_view"
            android:layout_width="0dp"
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="clear" />
        <EditText
            android:id="@+id/send_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="输入框"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/send"
            android:textColor="#E8EAF6"
            app:backgroundTint="#3F51B5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="send" />
    </LinearLayout>
</RelativeLayout>